<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/type_repere"
                android:textAllCaps="false" />

            <Spinner
                android:id="@+id/repere_type_chooser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nature_repere"
                android:textAllCaps="false" />

            <Spinner
                android:id="@+id/repere_nature_chooser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etat_repere" />

            <Spinner
                android:id="@+id/repere_etat_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num" />

            <EditText
                android:id="@+id/num_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/photo1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:onClick="photo1Click" />

            <ImageView
                android:id="@+id/photo2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:onClick="photo2Click" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarque" />

            <EditText
                android:id="@+id/remarques_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/longitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DMS" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/latitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DMS" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude" />

                <TextView
                    android:id="@+id/altitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DMS" />

            </LinearLayout>

            <Button
                android:id="@+id/update_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updatelocation" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operateur" />

            <EditText
                android:id="@+id/operateur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
